# bobibot-agent

./: .gitignore  Cargo.toml  README.md
src/: agent.rs  config.rs  main.rs  tools.rs
