[package]
name = "bobibot_agent"
version = "0.1.0"
edition = "2021"
description = "A personal assistant agent built with Rust"
authors = ["Yifun <369713387@qq.com>"]
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
